[gd_scene load_steps=3 format=3 uid="uid://bpl0axcwryce2"]

[ext_resource type="Script" uid="uid://wwgtu3dritvl" path="res://scenes/empty_slot.gd" id="1_khjyt"]
[ext_resource type="Texture2D" uid="uid://547l56s470b5" path="res://assets/sprites/slot.png" id="1_rd32u"]

[node name="EmptySlot" type="Node2D"]
z_index = 1
script = ExtResource("1_khjyt")

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_rd32u")

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
